k8s/bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge
  namespace: ac-iot
spec:
  replicas: 4
  selector:
    matchLabels:
      app: bridge
  template:
    metadata:
      labels:
        app: bridge
    spec:
      containers:
        - name: bridge
          image: ac-iot-sd-ufma-bridge:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: rooms
              mountPath: /config
              readOnly: true
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: rooms
          configMap:
            name: rooms-yaml
