k8s/simulator.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulator
  namespace: ac-iot
spec:
  clusterIP: None
  selector:
    app: simulator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: simulator
  namespace: ac-iot
spec:
  serviceName: simulator
  replicas: 10
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator
          image: ac-iot-sd-ufma-simulator:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: rooms
              mountPath: /config
              readOnly: true
          resources:
            requests:
              cpu: 150m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: rooms
          configMap:
            name: rooms-yaml
